// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`devices/components/moduleIdentity snapshot matches snapshot when fetch failed 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "moduleIdentity.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "moduleIdentity.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <h3>
    moduleIdentity.headerText
  </h3>
  <div
    className="device-detail"
  >
    <StyledWithViewportComponent
      columns={
        Array [
          Object {
            "ariaLabel": "moduleIdentity.columns.moduleId",
            "fieldName": "moduleId",
            "isResizable": true,
            "key": "moduleId",
            "maxWidth": 200,
            "minWidth": 50,
            "name": "moduleIdentity.columns.moduleId",
          },
          Object {
            "ariaLabel": "moduleIdentity.columns.connectionState",
            "fieldName": "connectionState",
            "isResizable": true,
            "key": "connectionState",
            "maxWidth": 200,
            "minWidth": 50,
            "name": "moduleIdentity.columns.connectionState",
          },
          Object {
            "ariaLabel": "moduleIdentity.columns.connectionStateLastUpdated",
            "fieldName": "connectionStateLastUpdated",
            "isResizable": true,
            "key": "connectionStateLastUpdated",
            "maxWidth": 250,
            "minWidth": 150,
            "name": "moduleIdentity.columns.connectionStateLastUpdated",
            "onRender": [Function],
          },
          Object {
            "ariaLabel": "moduleIdentity.columns.lastActivityTime",
            "fieldName": "lastActivityTime",
            "key": "lastActivityTime",
            "maxWidth": 250,
            "minWidth": 150,
            "name": "moduleIdentity.columns.lastActivityTime",
            "onRender": [Function],
          },
        ]
      }
      items={Array []}
      selectionMode={0}
    />
    moduleIdentity.errorFetching
  </div>
</Fragment>
`;

exports[`devices/components/moduleIdentity snapshot matches snapshot while loading 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "moduleIdentity.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "moduleIdentity.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <h3>
    moduleIdentity.headerText
  </h3>
  <div
    className="device-detail"
  >
    <StyledWithViewportComponent
      columns={
        Array [
          Object {
            "ariaLabel": "moduleIdentity.columns.moduleId",
            "fieldName": "moduleId",
            "isResizable": true,
            "key": "moduleId",
            "maxWidth": 200,
            "minWidth": 50,
            "name": "moduleIdentity.columns.moduleId",
          },
          Object {
            "ariaLabel": "moduleIdentity.columns.connectionState",
            "fieldName": "connectionState",
            "isResizable": true,
            "key": "connectionState",
            "maxWidth": 200,
            "minWidth": 50,
            "name": "moduleIdentity.columns.connectionState",
          },
          Object {
            "ariaLabel": "moduleIdentity.columns.connectionStateLastUpdated",
            "fieldName": "connectionStateLastUpdated",
            "isResizable": true,
            "key": "connectionStateLastUpdated",
            "maxWidth": 250,
            "minWidth": 150,
            "name": "moduleIdentity.columns.connectionStateLastUpdated",
            "onRender": [Function],
          },
          Object {
            "ariaLabel": "moduleIdentity.columns.lastActivityTime",
            "fieldName": "lastActivityTime",
            "key": "lastActivityTime",
            "maxWidth": 250,
            "minWidth": 150,
            "name": "moduleIdentity.columns.lastActivityTime",
            "onRender": [Function],
          },
        ]
      }
      items={Array []}
      selectionMode={0}
    />
    <div>
      <StyledShimmerBase
        key="0"
        shimmerElements={
          Array [
            Object {
              "height": 20,
              "type": 1,
            },
          ]
        }
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      />
      <StyledShimmerBase
        key="1"
        shimmerElements={
          Array [
            Object {
              "height": 20,
              "type": 1,
            },
          ]
        }
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      />
      <StyledShimmerBase
        key="2"
        shimmerElements={
          Array [
            Object {
              "height": 20,
              "type": 1,
            },
          ]
        }
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      />
    </div>
  </div>
</Fragment>
`;

exports[`devices/components/moduleIdentity snapshot matches snapshot with moduleIdentityList 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "moduleIdentity.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "moduleIdentity.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <h3>
    moduleIdentity.headerText
  </h3>
  <div
    className="device-detail"
  >
    <StyledWithViewportComponent
      columns={
        Array [
          Object {
            "ariaLabel": "moduleIdentity.columns.moduleId",
            "fieldName": "moduleId",
            "isResizable": true,
            "key": "moduleId",
            "maxWidth": 200,
            "minWidth": 50,
            "name": "moduleIdentity.columns.moduleId",
          },
          Object {
            "ariaLabel": "moduleIdentity.columns.connectionState",
            "fieldName": "connectionState",
            "isResizable": true,
            "key": "connectionState",
            "maxWidth": 200,
            "minWidth": 50,
            "name": "moduleIdentity.columns.connectionState",
          },
          Object {
            "ariaLabel": "moduleIdentity.columns.connectionStateLastUpdated",
            "fieldName": "connectionStateLastUpdated",
            "isResizable": true,
            "key": "connectionStateLastUpdated",
            "maxWidth": 250,
            "minWidth": 150,
            "name": "moduleIdentity.columns.connectionStateLastUpdated",
            "onRender": [Function],
          },
          Object {
            "ariaLabel": "moduleIdentity.columns.lastActivityTime",
            "fieldName": "lastActivityTime",
            "key": "lastActivityTime",
            "maxWidth": 250,
            "minWidth": 150,
            "name": "moduleIdentity.columns.lastActivityTime",
            "onRender": [Function],
          },
        ]
      }
      items={
        Array [
          Object {
            "authentication": null,
            "deviceId": "testDevice",
            "moduleId": "testModule",
          },
        ]
      }
      selectionMode={0}
    />
  </div>
</Fragment>
`;
